# dodobot

./: .gitignore  README.md  clicklib.py  dict.txt  dodo.py  gamer.py  helper.py  photo.py  pyproject.toml  regimg.py  requirements.txt  screener.py  scroller.py  tsrct.py  vision.py  worder.py
src/: clicklib.py  dict.txt  gamer.py  photo.py  regimg.py  trie.py  vision.py  worder.py
